attempt to fix background sizing on ios

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 body::before {
   background-image: url('married.jpg');
   background-size: cover;
-  background-attachment: fixed;
   background-position: center top;
   content: '';
   will-change: transform;
